fixed css overflow issue in chat__body

--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,96 +1,99 @@
 .chat {
-    display: flex;
-    flex-direction: column;
-    flex:0.65;
+  display: flex;
+  flex-direction: column;
+  flex: 0.65;
 }
 
 .chat__header {
-    display: flex;
-    padding: 20px;
-    align-items: center;
-    border-bottom: 1px solid lightgray;
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  border-bottom: 1px solid lightgray;
 }
 
 .chat__headerInfo {
-    flex: 1;
-    padding-left: 20px;
+  flex: 1;
+  padding-left: 20px;
+  max-width: 450px;
+  overflow: hidden;
 }
 
 .chat__headerInfo > h3 {
-    margin-bottom: 3px;
-    font-weight: 500;
+  margin-bottom: 3px;
+  font-weight: 500;
 }
 
 .chat__headerInfo > p {
-    color: grey;
+  color: grey;
 }
 
 .chat__body {
-    flex: 1;
-    background-image: url('https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png');
-    background-repeat: repeat;
-    background-position: center;
-    padding:30px;
-    overflow: scroll;
+  flex: 1;
+  background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
+  background-repeat: repeat;
+  background-position: center;
+  padding: 30px;
+  overflow: scroll;
 }
 
 .chat__body::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .chat__message {
-    position: relative;
-    font-size: 16px;
-    padding: 10px;
-    width: fit-content;
-    border-radius: 10px;
-    background-color: #ffffff;
-    margin-bottom: 30px;
+  position: relative;
+  font-size: 16px;
+  padding: 10px;
+  width: fit-content;
+  max-width: 600px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  margin-bottom: 30px;
 }
 
-.chat__sender{
-    margin-left: auto;
-    background-color: #dcf8c6;
+.chat__sender {
+  margin-left: auto;
+  background-color: #dcf8c6;
 }
 
 .chat__timestamp {
-    margin-left: 10px;
-    font-size: xx-small;
+  margin-left: 10px;
+  font-size: xx-small;
 }
 
 .chat__name {
-    position: absolute;
-    top: -15px;
-    font-weight: 800;
-    font-size: xx-small;
+  position: absolute;
+  top: -15px;
+  font-weight: 800;
+  font-size: xx-small;
 }
 
 .chat__footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 62px;
-    border-top:1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 62px;
+  border-top: 1px solid lightgray;
 }
 
 .chat__footer > form {
-    flex: 1;
-    display: flex;
+  flex: 1;
+  display: flex;
 }
 
 .chat__footer > form > input {
-    flex: 1;
-    border-radius: 30px;
-    padding: 10px;
-    border:none;
-    outline-width: 0;
+  flex: 1;
+  border-radius: 30px;
+  padding: 10px;
+  border: none;
+  outline-width: 0;
 }
 
 .chat__footer > form > button {
-    display: none;
+  display: none;
 }
 
 .chat__footer > .MuiSvgIcon-root {
-    padding: 10px;
-    color: gray;
+  padding: 10px;
+  color: gray;
 }
